# modules/menu/src/product/model.ts
@@ -5,7 +5,9 @@ export interface IProduct extends Document {
     brand: string;
     price: number;
     description?: string;
+    stockProductId: string;
     restaurantId: string;
+    userId: string;
     createdAt: Date;
     updatedAt: Date;
 }
@@ -15,12 +17,14 @@ const ProductSchema = new Schema<IProduct>({
     brand: { type: String, required: true },
     price: { type: Number, required: true },
     description: { type: String },
-    restaurantId: { type: String, required: true }
+    stockProductId: { type: String, required: true },
+    restaurantId: { type: String, required: true },
+    userId: { type: String, required: true }
 }, {
     timestamps: true
 });
 
-// Um produto é duplicado quando tem o mesmo nome + marca + restaurante
-ProductSchema.index({ name: 1, brand: 1, restaurantId: 1 }, { unique: true });
+// Um produto é duplicado quando tem o mesmo nome + marca + restaurante + usuario
+ProductSchema.index({ name: 1, brand: 1, restaurantId: 1, userId: 1 }, { unique: true });
 
 export const ProductModel = model<IProduct>("Product", ProductSchema);
