# modules/menu/src/product/router.ts
@@ -6,21 +6,29 @@ import {
     createManyProducts, 
     updateOneProduct, 
     deleteOneProduct, 
-    deleteManyProducts 
+    deleteManyProducts,
+    getAllUserProducts
 } from './controller';
 
 import { authMiddleware } from '../middlewares/auth.middleware';
 
 const router = Router();
 
+// Aplica o authMiddleware globalmente para garantir token, userId e restaurantId
+router.use(authMiddleware());
+
+// Rota para pegar todos os produtos do usuário independente da filial
+router.get('/user/all', getAllUserProducts);
+
 router.get('/:id', getOneProduct);
 router.get('/', getAllProducts);
 
-router.post('/', authMiddleware(), createOneProduct);
-router.post('/batch', authMiddleware(), createManyProducts);
+router.post('/', createOneProduct);
+router.post('/batch', createManyProducts);
 
-router.patch('/:id', authMiddleware(), updateOneProduct);
+router.patch('/:id', updateOneProduct);
 
+// A regra de admin é composta com a authMiddleware global
 router.delete('/:id', authMiddleware(['admin']), deleteOneProduct);
 router.delete('/batch', authMiddleware(['admin']), deleteManyProducts);
 
