# modules/menu/swagger-output.json
@@ -21,6 +21,19 @@
         }
       }
     },
+    "/product/user/all": {
+      "get": {
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
     "/product/{id}": {
       "get": {
         "description": "",
@@ -29,13 +42,6 @@
             "name": "id",
             "in": "path",
             "required": true,
-            "schema": {
-              "type": "string"
-            }
-          },
-          {
-            "name": "restaurantId",
-            "in": "query",
             "schema": {
               "type": "string"
             }
@@ -66,13 +72,6 @@
             "schema": {
               "type": "string"
             }
-          },
-          {
-            "name": "authorization",
-            "in": "header",
-            "schema": {
-              "type": "string"
-            }
           }
         ],
         "responses": {
@@ -81,12 +80,6 @@
           },
           "400": {
             "description": "Bad Request"
-          },
-          "401": {
-            "description": "Unauthorized"
-          },
-          "403": {
-            "description": "Forbidden"
           },
           "409": {
             "description": "Conflict"
@@ -101,10 +94,10 @@
               "schema": {
                 "type": "object",
                 "properties": {
-                  "restaurantId": {
+                  "userId": {
                     "example": "any"
                   },
-                  "data": {
+                  "restaurantId": {
                     "example": "any"
                   }
                 }
@@ -127,13 +120,6 @@
           {
             "name": "authorization",
             "in": "header",
-            "schema": {
-              "type": "string"
-            }
-          },
-          {
-            "name": "restaurantId",
-            "in": "query",
             "schema": {
               "type": "string"
             }
@@ -164,15 +150,6 @@
     "/product/": {
       "get": {
         "description": "",
-        "parameters": [
-          {
-            "name": "restaurantId",
-            "in": "query",
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
         "responses": {
           "200": {
             "description": "OK"
@@ -187,27 +164,12 @@
       },
       "post": {
         "description": "",
-        "parameters": [
-          {
-            "name": "authorization",
-            "in": "header",
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
         "responses": {
           "201": {
             "description": "Created"
           },
           "400": {
             "description": "Bad Request"
-          },
-          "401": {
-            "description": "Unauthorized"
-          },
-          "403": {
-            "description": "Forbidden"
           },
           "409": {
             "description": "Conflict"
@@ -234,7 +196,7 @@
                   "description": {
                     "example": "any"
                   },
-                  "restaurantId": {
+                  "stockProductId": {
                     "example": "any"
                   }
                 }
@@ -247,30 +209,32 @@
     "/product/batch": {
       "post": {
         "description": "",
-        "parameters": [
-          {
-            "name": "authorization",
-            "in": "header",
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
         "responses": {
           "201": {
             "description": "Created"
           },
-          "401": {
-            "description": "Unauthorized"
-          },
-          "403": {
-            "description": "Forbidden"
+          "400": {
+            "description": "Bad Request"
           },
           "409": {
             "description": "Conflict"
           },
           "500": {
             "description": "Internal Server Error"
+          }
+        },
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "map((item": {
+                    "example": "any"
+                  }
+                }
+              }
+            }
           }
         }
       },
@@ -309,9 +273,6 @@
                 "type": "object",
                 "properties": {
                   "ids": {
-                    "example": "any"
-                  },
-                  "restaurantId": {
                     "example": "any"
                   }
                 }
