# modules/order/src/order/router.ts
@@ -3,18 +3,26 @@ import {
     createOrder, 
     getAllOrders, 
     getOrderById, 
-    updateOrder 
+    updateOrder,
+    deleteOrder,
+    getAllUserOrders
 } from './controller';
 
 import { authMiddleware } from '../middlewares/auth.middleware';
 
 const router = Router();
 
+// Aplica o authMiddleware globalmente para garantir token, userId e restaurantId
+router.use(authMiddleware());
+
+router.get('/user/all', getAllUserOrders);
 router.get('/', getAllOrders);
 router.get('/:id', getOrderById);
 
-router.post('/', authMiddleware(), createOrder);
+router.post('/', createOrder);
 
-router.patch('/:id', authMiddleware(), updateOrder);
+router.patch('/:id', updateOrder);
+
+router.delete('/:id', authMiddleware(['admin']), deleteOrder);
 
 export default router;
